presubmission test run and update readme

--- a/src/00_visualisation.ipynb
+++ b/src/00_visualisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "227d248c",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "97574067",
    "metadata": {},
    "outputs": [
@@ -149,8 +149,8 @@
     "\n",
     "plt.tight_layout()\n",
     "if save_things:\n",
-    "    plt.savefig(fig_dir / 'rn_vis.png', dpi=300)\n",
-    "    plt.savefig(fig_dir / 'rn_vis.pdf', dpi=300)\n",
+    "    plt.savefig(fig_dir / 'rn_vis.png', dpi=300, transparent=True)\n",
+    "    plt.savefig(fig_dir / 'rn_vis.pdf', dpi=300, transparent=True)\n",
     "\n",
     "plt.show()"
    ]
