--- a/src/01_vectorisation.ipynb
+++ b/src/01_vectorisation.ipynb
@@ -9,14 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "import scipy as sp\n",
     "import pandas as pd\n",
-    "# import os\n",
     "from pathlib import Path\n"
    ]
   },
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,12 +84,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "grn_datadir = cwd.parent / 'data' / 'grn' # '../data/grn'\n",
+    "grn_datadir = cwd.parent / 'data' / 'grn' \n",
     "\n",
     "if save_things:\n",
     "    grn_processed_dir = grn_datadir / 'processed'\n",
@@ -192,6 +191,47 @@
     "\n",
     "# construct a dataframe:\n",
     "all_norm_vec_df = pd.DataFrame(sp.sparse.hstack([a_gG_out_normalised, a_gG_in_normalised]).toarray(), columns=all_col_names, index=all_row_names)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['_out_out'], dtype='<U8')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(['_out'], dtype='<U4') + np.array(['_out'], dtype='<U4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['GO:0000002', 'GO:0000012', 'GO:0000014', ..., 'GO:0071457',\n",
+       "       'GO:0008287', 'GO:0004071'], dtype='<U10')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GO_col[out_col_keep]"
    ]
   },
   {
